Add background and darkmode checkbox

--- a/index.html
+++ b/index.html
@@ -1,156 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Tex Formula Renderer</title>
+  <meta charset="UTF-8">
+  <title>Tex Formula Renderer</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" name="viewport">
 
-    <style type="text/css" media="screen">
-        html, body {
-            background-color: #2F3129;
-        }
+  <style media="screen" type="text/css">
+  html, body {
+      background-color: #2F3129;
+  }
 
-        #editor {
-            position: absolute;
-            top: 0;
-            right: 50vw;
-            bottom: 0;
-            left: 0;
-        }
+  #editor {
+      position: absolute;
+      top: 0;
+      right: 50vw;
+      bottom: 0;
+      left: 0;
+  }
 
-        #view {
-            position: absolute;
-            top: 0;
-            right: 0;
-            bottom: 0;
-            left: 50vw;
+  #view {
+      position: absolute;
+      top: 0;
+      right: 0;
+      bottom: 0;
+      left: 50vw;
 
-            background-color: #0e0e0e;
-        }
+      background-color: #ececec;
+  }
 
-        #view-img {
-            position: absolute;
-            left: 50%;
-            top: 50%;
+  .dark #view {
+      background-color: #0e0e0e;
+  }
 
-            max-width: calc(50vw - 50px);
+  #view-img {
+      position: absolute;
+      left: 50%;
+      top: 50%;
 
-            transform: translateY(-50%) translateX(-50%);
-        }
+      max-width: calc(50vw - 50px);
 
-        #view-errors {
-            position: static;
-            left: 0;
-            top: 0;
-            right: 0;
+      transform: translateY(-50%) translateX(-50%);
+  }
 
-            margin: 20px;
+  #view-bar {
+      padding: 5px;
+      background-color: white;
 
-            color: #d63236;
-        }
+      max-width: calc(50vw);
+  }
 
-        @media screen and (max-width: 1400px) {
-            #editor {
-                top: 0;
-                right: 0;
-                bottom: 50vh;
-                left: 0;
-            }
+  #view-errors {
+      position: static;
+      left: 0;
+      top: 0;
+      right: 0;
 
-            #view {
-                position: absolute;
-                top: 50vh;
-                right: 0;
-                bottom: 0;
-                left: 0;
-            }
+      margin: 20px;
 
-            #view-img {
-                position: absolute;
-                left: 50%;
-                top: 50%;
+      color: #d63236;
+  }
 
-                max-width: calc(100vw - 50px);
-                max-height: calc(50vh - 50px);
+  @media screen and (max-width: 1400px) {
+      #editor {
+          top: 0;
+          right: 0;
+          bottom: 50vh;
+          left: 0;
+      }
 
-                transform: translateY(-50%) translateX(-50%);
-            }
-        }
-    </style>
+      #view {
+          position: absolute;
+          top: 50vh;
+          right: 0;
+          bottom: 0;
+          left: 0;
+      }
+
+      #view-img {
+          position: absolute;
+          left: 50%;
+          top: 50%;
+
+          max-width: calc(100vw - 50px);
+          max-height: calc(50vh - 50px);
+
+          transform: translateY(-50%) translateX(-50%);
+      }
+  }
+  </style>
 </head>
-<body>
+<body class="dark">
 
 <div id="editor">\left.\begin{array}{rl}
-    0&=x^3+2x^2+4x+8\\
-    &=x^2(x+2)+4(x+2)\\
-    &=(x+2)(x^2+4)
-\end{array}\right\} \Rightarrow
-x=-2, x=\frac{\pm \sqrt{-16}}{2}=\pm 2i
+  0&=x^3+2x^2+4x+8\\
+  &=x^2(x+2)+4(x+2)\\
+  &=(x+2)(x^2+4)
+  \end{array}\right\} \Rightarrow
+  x=-2, x=\frac{\pm \sqrt{-16}}{2}=\pm 2i
 </div>
 
 <div id="view">
-    <div id="view-errors"></div>
-    <img id="view-img" src="">
+  <div id="view-bar">
+    <input id="dark" type="checkbox"/>
+    <label for="dark">Dark Mode</label>
+    <input id="background" type="checkbox"/>
+    <label for="background">Background</label>
+  </div>
+  <div id="view-errors"></div>
+  <img id="view-img" src="">
 </div>
 
 <script src="/underscore-min.js"></script>
 <script src="/ace.js"></script>
 
 <script>
-  let view = document.getElementById("view-img");
-  let errorsView = document.getElementById("view-errors");
+let view = document.getElementById("view-img");
+let errorsView = document.getElementById("view-errors");
 
-  let editor = ace.edit("editor");
-  editor.setTheme("ace/theme/monokai");
-  editor.session.setMode("ace/mode/tex");
+let editor = ace.edit("editor");
+editor.setTheme("ace/theme/monokai");
+editor.session.setMode("ace/mode/tex");
 
-  let updateView = _.debounce(function () {
-    let size = 200;
+let updateView = _.debounce(function () {
+  let size = 200;
 
-    let tex = editor.getValue().replace(/\n/g, ' ');
-    tex = encodeURI(tex);
+  let tex = editor.getValue().replace(/\n/g, ' ');
+  tex = encodeURI(tex);
 
-    errorsView.textContent = '';
+  errorsView.textContent = '';
 
-    view.src = location.origin + "/" + size + "/" + tex;
-  }, 100);
+  const query = [];
 
-  view.onerror = _.debounce(function () {
-    let tex = editor.getValue().replace(/\n/g, ' ');
-    tex = encodeURI(tex);
-
-    let xmlHttp = new XMLHttpRequest();
-    xmlHttp.onreadystatechange = function() {
-      if (xmlHttp.readyState === 4 && xmlHttp.status === 200) {
-        console.log(xmlHttp.responseText);
-        let errors = JSON.parse(xmlHttp.responseText);
-
-        for (let i in errors) {
-          errorsView.innerHTML += " - " + errors[i] + "<br>"
-        }
-      }
-    };
-    xmlHttp.open("GET", location.origin + "/check/" + tex);
-    xmlHttp.send(null);
-  }, 500);
-
-  editor.on("change", function (e) {
-    localStorage.setItem("tex", editor.getValue());
-
-    updateView();
-  });
-
-  if(window.location.hash) {
-    editor.setValue(decodeURIComponent(window.location.hash.substr(1)))
-  } else {
-    let localTex = localStorage.getItem("tex");
-    if (localTex) {
-      editor.setValue(localTex)
-    }
+  if (!darkCheckbox.checked) {
+    query.push('black')
   }
 
+  if (backgroundCheckbox.checked) {
+    query.push('background')
+  }
+
+  view.src = location.origin + "/" + size + "/" + tex + (query.length > 0 ? `?${query.join('&')}` : '');
+}, 100);
+
+view.onerror = _.debounce(function () {
+  let tex = editor.getValue().replace(/\n/g, ' ');
+  tex = encodeURI(tex);
+
+  let xmlHttp = new XMLHttpRequest();
+  xmlHttp.onreadystatechange = function () {
+    if (xmlHttp.readyState === 4 && xmlHttp.status === 200) {
+      console.log(xmlHttp.responseText);
+      let errors = JSON.parse(xmlHttp.responseText);
+
+      for (let i in errors) {
+        errorsView.innerHTML += " - " + errors[i] + "<br>"
+      }
+    }
+  };
+  xmlHttp.open("GET", location.origin + "/check/" + tex);
+  xmlHttp.send(null);
+}, 500);
+
+editor.on("change", function (e) {
+  localStorage.setItem("tex", editor.getValue());
+
   updateView();
+});
+
+const darkCheckbox = document.getElementById('dark');
+const backgroundCheckbox = document.getElementById('background');
+
+let localDark = localStorage.getItem("dark");
+if (!localDark || localDark === 'true') {
+  document.body.className = 'dark';
+  darkCheckbox.checked = true;
+}
+
+let localBackground = localStorage.getItem("background");
+if (localBackground === 'true') {
+  backgroundCheckbox.checked = true;
+}
+
+if (window.location.hash) {
+  editor.setValue(decodeURIComponent(window.location.hash.substr(1)))
+} else {
+  let localTex = localStorage.getItem("tex");
+  if (localTex) {
+    editor.setValue(localTex)
+  }
+}
+
+darkCheckbox.oninput = function () {
+  document.body.className = this.checked ? 'dark' : '';
+
+  updateView();
+};
+
+backgroundCheckbox.oninput = function () {
+  updateView();
+};
+
+updateView();
 </script>
 </body>
 </html>
